--- a/hasher.cabal
+++ b/hasher.cabal
@@ -18,8 +18,8 @@ build-type:     Simple
 cabal-version:  >= 1.10
 
 extra-source-files:
-    ChangeLog.md
-    README.md
+                   ChangeLog.md
+                   README.md
 
 source-repository head
   type: git
@@ -27,44 +27,44 @@ source-repository head
 
 library
   hs-source-dirs:
-      src
+                 src
   build-depends:
-      base >=4.7 && <5
-    , bytestring
-    , cryptonite
-    , memory
-    , text
+                base >=4.7 && <5
+              , bytestring
+              , cryptonite
+              , text
   exposed-modules:
-      HashGenerator
+                  HashGenerator
   other-modules:
-      Paths_hasher
+                Paths_hasher
   default-language: Haskell2010
 
 executable hasher-exe
   main-is: Main.hs
   hs-source-dirs:
-      app
+                 app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
-    , bytestring
-    , cryptonite
-    , hasher
-    , memory
-    , text
+                base >=4.7 && <5
+              , bytestring
+              , cryptonite
+              , hasher
+              , text
+              , lens
+              
   other-modules:
-      Paths_hasher
+                Paths_hasher
   default-language: Haskell2010
 
 test-suite hasher-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   hs-source-dirs:
-      test
+                 test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
-    , hasher
+                base >=4.7 && <5
+              , hasher
   other-modules:
-      Paths_hasher
+                Paths_hasher
   default-language: Haskell2010
