--- a/hasher.cabal
+++ b/hasher.cabal
@@ -35,6 +35,8 @@ library
               , text
   exposed-modules:
                   HashGenerator
+                , InteractiveRun
+                , CommandLineParser
   other-modules:
                 Paths_hasher
   default-language: Haskell2010
